Add all gnome modules and clarify a bit
2006-06-12  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

        * about.src: Add all gnome modules and clarify a bit

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2006-06-12  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
 
+	* about.src: Add all gnome modules and clarify a bit
+
+2006-06-12  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
+
 	* applications.src: Add kefir (tepache fork)
 
 2006-06-12  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
