--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2006-08-09  Rafael Villar Burke  <pachi@rvburke.com>
 
+	* articles/writing-a-custom-widget-using-pygtk/writing-a-custom-widget-using-pygtk.htm:
+	* articles/writing-a-custom-widget-using-pygtk/resources/starHScale.swf: fix
+	article source and add missing file
+
+2006-08-09  Rafael Villar Burke  <pachi@rvburke.com>
+
 	* articles.src: link article by Mark Mruss
 	* newsitems.src: new article item
 
