--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2006-08-20  Rafael Villar Burke  <pachi@rvburke.com>
+	* applications.src: Add SaberNet DCS.
+
 2006-08-09  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* articles/writing-a-custom-widget-using-pygtk/writing-a-custom-widget-using-pygtk.htm:
