--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-08-21  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Add PanelSwitcher and SessionBackup
+
 2006-08-20  Rafael Villar Burke  <pachi@rvburke.com>
 	* applications.src: Add SaberNet DCS.
 
