--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-08-28  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* articles.src: Place article in the right place.
+
 2006-08-25  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* articles.src: Add link to japanese translation by Satoshi Tanabe
