--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-09-07  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* articles.src: Add link to japanese translation by Satoshi Tanabe
+	of the "Building an Application with PyGTK and Glade" article
+
 2006-09-04  Johan Dahlin  <jdahlin@async.com.br>
 
 	* Makefile (LOCAL_TARBALLS): Download reference tarballs from gnome.org,
