--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-09-14  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Add PyChess
+
 2006-09-07  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* articles.src: Add link to japanese translation by Satoshi Tanabe
