--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-09-18  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* articles.src: Add link to chinese translations to Mark Mruss
+	articles, by Richard Han
+
 2006-09-14  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: Add PyChess
