Add Sonata, Mirage
2006-09-27  Rafael Villar Burke  <pachi@rvburke.com>

	* applications.src: Add Sonata, Mirage

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-09-27  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Add Sonata, Mirage
+
 2006-09-18  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* articles.src: Add link to chinese translations to Mark Mruss
