--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2006-09-27  Rafael Villar Burke  <pachi@rvburke.com>
 
+	* applications.src: Add Mesk Audio Player
+
+2006-09-27  Rafael Villar Burke  <pachi@rvburke.com>
+
 	* applications.src: Add Sonata, Mirage
 
 2006-09-18  Rafael Villar Burke  <pachi@rvburke.com>
