--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-10-09  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Add Labyrinth mind-mapping tool
+
 2006-10-02  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* articles/wordpy-offline-blogging-tool/wordpy-offline-blogging-tool.htm
