--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-10-20  Christian Reis  <kiko@async.com.br>
+
+	* applications.src: add Taof networking tool.
+
 2006-10-20  Johan Dahlin  <jdahlin@async.com.br>
 
 	* newsitems.py: Add a news item
