Add link to my entry
2006-11-22  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* people.src: Add link to my entry

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-11-22  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
+
+	* people.src: Add link to my entry
+
 2006-10-31  Christian Reis  <kiko@async.com.br>
 
 	* articles.src: add japanese translation of Writing a Custom
