--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-12-13  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* tutorial.src: Add small intro paragraph referring to other
+	introductory material on the web (articles, and API ref.)
+
 2006-11-22  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
 
 	* people.src: Add link to my entry
