--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-12-15  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Add Python GTK Console widget.
+
 2006-12-13  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* tutorial.src: Add small intro paragraph referring to other
