--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-12-18  Rafael Villar Burke  <pachi@rvburke.com>:
+
+	* applications.src: Add Deluge bittorrent client.
+
 2006-12-15  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: Add Python GTK Console widget.
