--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
-2006-12-18  Rafael Villar Burke  <pachi@rvburke.com>:
+2006-12-22  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Add Exile!.
+
+2006-12-18  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: Add Deluge bittorrent client.
 
