--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 2006-12-22  Rafael Villar Burke  <pachi@rvburke.com>
 
-	* applications.src: Add Exile!.
+	* applications.src: Add Exaile!.
 
 2006-12-18  Rafael Villar Burke  <pachi@rvburke.com>
 
