--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2006-12-22  Rafael Villar Burke  <pachi@rvburke.com>
 
+	* articles.src: Add french translations of Marc Mruss
+	by Daniel Coquette.
+
+2006-12-22  Rafael Villar Burke  <pachi@rvburke.com>
+
 	* applications.src: Add Exaile!.
 
 2006-12-18  Rafael Villar Burke  <pachi@rvburke.com>
