--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-12-24  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Add Planimo.
+
 2006-12-22  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* articles.src: Add french translations of Marc Mruss
