--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-01-10  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* developer.src
+	* head.src: change Viewcvs urls to subversion ones.
+
 2006-12-24  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: Add Planimo.
