--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,10 @@
+2007-01-15  Christian Reis  <kiko@async.com.br>
+
+	* applications.src: Add AVC.
+
 2007-01-10  Rafael Villar Burke  <pachi@rvburke.com>
 
-	* developer.src
-	* head.src: change Viewcvs urls to subversion ones.
+	* developer.src, head.src: change Viewcvs urls to subversion ones.
 
 2006-12-24  Rafael Villar Burke  <pachi@rvburke.com>
 
