--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-01-30  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* downloads.src, developer.src: Change references to CVS to SVN.
+
 2007-01-15  Christian Reis  <kiko@async.com.br>
 
 	* applications.src: Add AVC.
