--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-01-30  Olav Vitters  <olav@bkor.dhs.org>
+
+	* Makefile: cp -fa to force the files to be copied (fixes build).
+
 2007-01-30  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* downloads.src, developer.src: Change references to CVS to SVN.
