--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-02-09  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Add PyTrainer
+
 2007-02-07  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: Add Gnapsack
