--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-02-10  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* MAINTAINERS: update e-mail
+
 2007-02-09  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: Add PyTrainer
