Change Sridhar Ratna's website URL to http://www.nearfar.org
2007-02-19  Rafael Villar Burke  <pachi@rvburke.com>

	* newsitems: Change Sridhar Ratna's website URL
	to http://www.nearfar.org

svn path=/trunk/; revision=370

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-02-19  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* newsitems: Change Sridhar Ratna's website URL
+	to http://www.nearfar.org
+
 2007-02-13  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* newsitems: Add all-in-one installer link
