--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-02-26  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: update gquilt link
+
 2007-02-19  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* newsitems: Change Sridhar Ratna's website URL
