--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-03-02  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: add Go-osmose
+
 2007-02-26  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: update gquilt link
