--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-03-20  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* articles/extending-our-pygtk-application/
+	extending-our-pygtk-application.htm: fix link URL
+
 2007-03-12  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: add weedbox
