--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-04-19  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: add Amigu
+
 2007-03-25  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* articles/custom-widgets-glade/
