Move Cedric Gustin information here and fix ordering.
2007-05-03  Rafael Villar Burke  <pachi@rvburke.com>

	* people.src: Move Cedric Gustin information here and
	fix ordering.

svn path=/trunk/; revision=379

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-05-03  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* people.src: Move Cedric Gustin information here and
+	fix ordering.
+
 2007-04-19  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: add Amigu
