fix typo that breaks background color selection
2007-05-04  Rafael Villar Burke  <pachi@rvburke.com>

    	* default.css: fix typo that breaks background color selection

svn path=/trunk/; revision=388

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2007-05-04  Rafael Villar Burke  <pachi@rvburke.com>
 
+	* default.css: fix typo that breaks background color selection
 	* index.src: Rewrite foreword section
 
 2007-05-03  Rafael Villar Burke  <pachi@rvburke.com>
