--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2007-05-04  Rafael Villar Burke  <pachi@rvburke.com>
 
+	* dowloads.src: rewrite list of distros
 	* default.css: fix typo that breaks background color selection
 	* index.src: Rewrite foreword section
 
