--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-05-11  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* index.src: Edit intro paragraph (strong, free software)
+
 2007-05-10  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: New Pagemap application
