--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-05-17  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: New Envy application
+
 2007-05-11  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* index.src: Edit intro paragraph (strong, free software)
