Added PyCon2004 slides
2007-05-17  Rafael Villar Burke  <pachi@rvburke.com>

	* articles.src: Added PyCon2004 slides

svn path=/trunk/; revision=398

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2007-05-17  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: New Envy application
+	* articles.src: Added PyCon2004 slides
 
 2007-05-11  Rafael Villar Burke  <pachi@rvburke.com>
 
