--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-06-01  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Add Pygtk MVC
+
 2007-05-29  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* Makefile: Add new pages target to just test static content
