--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-06-06  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Add Itaka screenshot server
+
 2007-06-01  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: Add Pygtk MVC
