--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-06-06  Johan Dahlin  <jdahlin@async.com.br>
+
+	* about.src:
+	* head.src:
+	Update link to FAQ.
+
 2007-06-06  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: Add Itaka screenshot server
