update link to FAQ
2007-06-07  Rafael Villar Burke  <pachi@rvburke.com>

	* downloads.src: update link to FAQ

svn path=/trunk/; revision=405

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-06-07  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* downloads.src: update link to FAQ
+
 2007-06-06  Johan Dahlin  <jdahlin@async.com.br>
 
 	* about.src:
