--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-06-24  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: add EduKT
+
 2007-06-07  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* downloads.src: update link to FAQ
