--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 2007-06-24  Rafael Villar Burke  <pachi@rvburke.com>
 
-	* applications.src: add EduKT
+	* applications.src: add EduKT, Buxon
 
 2007-06-07  Rafael Villar Burke  <pachi@rvburke.com>
 
