--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-07-02  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* downloads.src: Fix typo in URL
+
 2007-06-24  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: add EduKT, Buxon
