--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-08-10  Johan Dahlin  <jdahlin@async.com.br>
+
+	* head.src: Add a link to the FAQ
+
 2007-07-02  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* downloads.src: Fix typo in URL
