--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-09-03  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Add gtklogger
+	* MAINTAINERS: Fix formatting as per new policy
+
 2007-08-27  Rafael Villar Burke  <pachi@rvburke.com>
 
         * applications.src: Add BluePad
