--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-09-05  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Add pymfvu
+
 2007-09-03  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: Add gtklogger
