--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-09-28  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* articles.src: Fix author name. Use Travis B.Hartwell
+	* applications.src: Add pySQLiteGUI and ListView
+
 2007-09-05  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: Add pymfvu
