--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-10-02  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Add vsdviewer
+
 2007-09-28  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* articles.src: Fix author name. Use Travis B.Hartwell
