--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-10-28  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Add sler
+
 2007-10-02  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: Add vsdviewer
@@ -18,7 +22,7 @@
 
 2007-08-27  Rafael Villar Burke  <pachi@rvburke.com>
 
-        * applications.src: Add BluePad
+	* applications.src: Add BluePad
 
 2007-08-10  Johan Dahlin  <jdahlin@async.com.br>
 
