--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-11-04  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Add songwriter2
+
 2007-10-28  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: Add sler
