--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-11-12  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Update AVC link
+	* downloads.src: Add a notice about pygobject dependency and
+	update current version to 2.12.
+
 2007-11-04  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: Add songwriter2
