--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-12-10  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Add D-Feet by John Palmieri
+
 2007-11-27  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: Add Alberto Milone's URandR
