Add OggConvert by Tristan Brindle
2008-01-02  Rafael Villar Burke  <pachi@rvburke.com>

	* applications.src: Add OggConvert by Tristan Brindle

svn path=/trunk/; revision=422

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-02  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Add OggConvert by Tristan Brindle
+
 2007-12-27  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: Add GBirthday by Alex Mallo
