--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-03  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Add Symbide
+
 2008-01-02  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: Add OggConvert by Tristan Brindle
