Add PyPreview by Omar Gómez
2008-01-04  Rafael Villar Burke  <pachi@rvburke.com>

	* applications.src: Add PyPreview by Omar Gómez

svn path=/trunk/; revision=424

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-04  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Add PyPreview by Omar Gómez
+
 2008-01-03  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: Add Symbide
