--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 2008-01-07  Rafael Villar Burke  <pachi@rvburke.com>
 
-	* applications.src: BackuPod by Beshr Kayali
+	* applications.src: Add BackuPod and COD by Beshr Kayali
 
 2008-01-04  Rafael Villar Burke  <pachi@rvburke.com>
 
