--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-08  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Add Flyback
+
 2008-01-07  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: Add BackuPod and COD by Beshr Kayali
