--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-09  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Addy Ghost diagrams, Lybniz, GResistor
+
 2008-01-08  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: Add Flyback
