--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-01-17  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* articles.src: Add 'Cairo Tutorial for PyGTK Programmers' by
+	Michael Urman
+
 2008-01-15  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: Add Conduit, by John Stowers, and GFreqlet,
