--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-30  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Add Newton, by Dennis Craven
+
 2008-01-25  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: Add Hotwire shell by Colin Walters
