--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 2008-01-30  Rafael Villar Burke  <pachi@rvburke.com>
 
-	* applications.src: Add Newton, by Dennis Craven
+	* applications.src: Add Newton, by Dennis Craven, and Bauble
 
 2008-01-25  Rafael Villar Burke  <pachi@rvburke.com>
 
