--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-06  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Add PyTPV, by Juan José Rojo
+
 2008-01-30  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: Add Newton, by Dennis Craven, and Bauble
