Add Zeobuilder, by Toon Verstraelen
2008-03-04  Rafael Villar Burke  <pachi@rvburke.com>

	* applications.src: Add Zeobuilder, by Toon Verstraelen

svn path=/trunk/; revision=438

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-04  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Add Zeobuilder, by Toon Verstraelen
+
 2008-02-06  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: Add PyTPV, by Juan José Rojo
