Add core solutions.
2008-04-01  Johan Dahlin  <jdahlin@async.com.br>

    * consulting.src: Add core solutions.


svn path=/trunk/; revision=439

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-01  Johan Dahlin  <jdahlin@async.com.br>
+
+	* consulting.src: Add core solutions.
+
 2008-03-04  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: Add Zeobuilder, by Toon Verstraelen
