--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-02  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* downloads.src: Add link to the gtk+ binary bundle
+
 2008-04-01  Johan Dahlin  <jdahlin@async.com.br>
 
 	* consulting.src: Add core solutions.
