--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-16  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Add Project Hamster
+
 2008-04-02  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* downloads.src: Add link to the gtk+ binary bundle
