Update reference dates and strip blank spaces
2008-04-16  Rafael Villar Burke  <pachi@rvburke.com>

	* reference.src: Update reference dates and strip blank spaces

svn path=/trunk/; revision=443

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2008-04-16  Rafael Villar Burke  <pachi@rvburke.com>
 
-	* applications.src: Add Project Hamster
+	* applications.src: Add Project Hamstero
+	* reference.src: Update reference dates and strip blank spaces
 
 2008-04-02  Rafael Villar Burke  <pachi@rvburke.com>
 
