Remove dead link
2008-04-20  Rafael Villar Burke  <pachi@rvburke.com>

	* feedback.src: Remove dead link

svn path=/trunk/; revision=444

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-20  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* feedback.src: Remove dead link
+
 2008-04-16  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: Add Project Hamstero
