--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-23  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* downloads.src: update to pygobject 2.14, pygtk 2.12 and pycairo 1.4
+
 2008-04-20  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* feedback.src: Remove dead link
