--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-06-04  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* articles.src: Add japanese translation links
+
 2008-05-29  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: Add Bluemindo by Erwan Briand and Umit
