--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-06-05  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Add COMPI by Fernando Ruiz Humanes
+	* articles.src: Add article on packaging for windows by Ali Afshar
+
 2008-06-04  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* articles.src: Add japanese translation links
