--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-06-06  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* articles.src: Move last article into subsection
+
 2008-06-06  Gian Mario Tagliaretti  <gianmt@gnome.org>
 
 	* articles.src: Add Japanese translation of Mark Mruss's extending
