--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-06-07  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* articles.src: Fix typo
+
 2008-06-06  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* articles.src: Move last article into subsection
