--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-06-17  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* Application.src: Add gslimp3
+
 2008-06-07  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* articles.src: Fix typo
