Add Python Kye by Colin Phipps.
2008-07-04  Rafael Villar Burke  <pachi@rvburke.com>

	* application.src: Add Python Kye by Colin Phipps.

svn path=/trunk/; revision=456

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-07-04  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* application.src: Add Python Kye by Colin Phipps.
+
 2008-06-26  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: Add pyGnomeFind by Kyle Brandt
