Fix URL for GFCE Ultra
2008-08-05  Rafael Villar Burke  <pachi@rvburke.com>

	* application.src: Fix URL for GFCE Ultra

svn path=/trunk/; revision=457

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-08-05  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* application.src: Fix URL for GFCE Ultra
+
 2008-07-04  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* application.src: Add Python Kye by Colin Phipps.
