--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-08-12  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* application.src: Add gslimp3 URL
+
 2008-08-05  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* application.src: Fix URL for GFCE Ultra
