--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-24  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* application.src: Add Gnome screenshot applet
+
 2008-08-12  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* application.src: Add gslimp3 URL
