--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-10-28  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* consulting.src: Add Thomas Perl to the list
+
 2008-09-24  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* application.src: Add Gnome screenshot applet
