Add Sqlkit by Alessandro Dentella
2008-11-11  Rafael Villar Burke  <pachi@rvburke.com>

	* application.src: Add Sqlkit by Alessandro Dentella

svn path=/trunk/; revision=461

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-11-11  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* application.src: Add Sqlkit by Alessandro Dentella
+
 2008-10-28  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* consulting.src: Add Thomas Perl to the list
