Add gtkbuilder related articles by Micah Carrick
2009-01-08  Rafael Villar Burke  <pachi@rvburke.com>

	* articles.src: Add gtkbuilder related articles by Micah Carrick

svn path=/trunk/; revision=466

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-01-08  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* articles.src: Add gtkbuilder related articles by Micah Carrick
+
 2008-12-24  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* index.src: Fix typo
