Fix some XHTML validation issues
2009-01-08  Rafael Villar Burke  <pachi@rvburke.com>

	* articles, about.src, feedback.src,
	consulting.src, applications.src, developer.src:
	Fix some XHTML validation issues

svn path=/trunk/; revision=468

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,9 @@
 2009-01-08  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* articles.src: Add gtkbuilder related articles by Micah Carrick
-	* head.src, foot.src, feed.py: Fix some XHTML validation issues
+	* head.src, foot.src, feed.py, about.src, downloads.src, feedback.src,
+	consulting.src, applications.src, developer.src:
+	Fix some XHTML validation issues
 
 2008-12-24  Rafael Villar Burke  <pachi@rvburke.com>
 
