--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-01-15  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Add Tablet apps
+
 2009-01-08  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* articles.src: Add gtkbuilder related articles by Micah Carrick
