--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-01-16  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Add BleachBit
+
 2009-01-15  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: Add Tablet apps
