Add Freemix by Luis de Bethencourt
2009-02-09  Rafael Villar Burke  <pachi@rvburke.com>

	* applications.src: Add Freemix by Luis de Bethencourt

svn path=/trunk/; revision=473

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-02-09  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Add Freemix by Luis de Bethencourt
+
 2009-01-21  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: Add Facebook-notify
