Add tutorial by serpia.com: PyGTK+Matplotlib
2009-02-16  Rafael Villar Burke  <pachi@rvburke.com>

	* articles.src: Add tutorial by serpia.com: PyGTK+Matplotlib


svn path=/trunk/; revision=474

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-02-16  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* articles.src: Add tutorial by serpia.com: PyGTK+Matplotlib
+
 2009-02-09  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: Add Freemix by Luis de Bethencourt
