--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-02-25  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Add jBrout, KeepNote, pyRenamer, Fricorder, Specto
+
 2009-02-16  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* articles.src: Add tutorial by serpia.com: PyGTK+Matplotlib
