--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-02-26  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Add pybootchartgui
+
 2009-02-25  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: Add jBrout, KeepNote, pyRenamer, Fricorder, Specto
