--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-03-07  Gian Mario Tagliaretti  <gianmt@gnome.org>
+
+	* reference.src: Update reference date
+
 2009-03-06  Gian Mario Tagliaretti  <gianmt@gnome.org>
 
 	* newsitems.py: Advertise 2.14.1 release
