Remove broken link
2009-03-29  Rafael Villar Burke  <pachi@rvburke.com>

	* articles.src: Remove broken link

svn path=/trunk/; revision=480

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-03-29  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* articles.src: Remove broken link
+
 2009-03-07  Gian Mario Tagliaretti  <gianmt@gnome.org>
 
 	* reference.src: Update reference date
