--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-06-02  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Add Gaphas, Writr, PyGtkImageView and PyGtkCanvas
+
 2009-05-10  Gian Mario Tagliaretti  <gianmt@gnome.org>
 
 	* newsitems.py: Advertise 2.17.0 release of pygobject and
