--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-06-07  Gian Mario Tagliaretti  <gianmt@gnome.org>
+
+	* newsitems.py: Advertise 2.18.0 release of pygobject and
+	2.15.1 release of pygtk
+
 2009-06-02  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: Add Gaphas, Writr, PyGtkImageView and PyGtkCanvas
