Link to the references on library.gnome.org

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-06-20  Gian Mario Tagliaretti  <gianmt@gnome.org>
+
+	* reference.src: Link to the references on library.gnome.org
+
 2009-06-07  Gian Mario Tagliaretti  <gianmt@gnome.org>
 
 	* downloads.src: Update with the latest stable versions and
