Update the date on the reference page

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2009-06-20  Gian Mario Tagliaretti  <gianmt@gnome.org>
 
+	* reference.src: Update the date on the page
+
+2009-06-20  Gian Mario Tagliaretti  <gianmt@gnome.org>
+
 	* reference.src: Link to the references on library.gnome.org
 
 2009-06-07  Gian Mario Tagliaretti  <gianmt@gnome.org>
