--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-06-23  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* downloads.src: Update windows download links and add glade3
+
 2009-06-20  Gian Mario Tagliaretti  <gianmt@gnome.org>
 
 	* reference.src: Update the date on the page
