--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-07-11  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Update pythoncad URL
+
 2009-06-23  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* downloads.src: Update windows download links and add glade3
