--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-07-14  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Add diffuse merge and diff tool and update
+	tortoisehg URL
+
 2009-07-11  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: Update pythoncad URL
