--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-08-03  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Add Virtaal
+
 2009-07-14  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: Add diffuse merge and diff tool and update
