2009-09-17  Rafael Villar Burke  <pachi@rvburke.com>
	* applications.src: Add Pyblassreport

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-09-17  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Add Pyblassreport
+
 2009-09-14  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: Add Tivion, BBCalc and Pycasa
