--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-09-22  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: update link
+
 2009-09-18  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* articles/subclassing-gobject/*: Add article
