--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-09-24  Gian Mario Tagliaretti  <gianmt@gnome.org>
+
+	* newsitems.py: Advertise 2.20.0 release of pygobject and
+	2.16.0 release of pygtk
+
 2009-09-22  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: update link
