2009-10-03  Rafael Villar Burke  <pachi@rvburke.com>
	* applications.src: Add Samuel from John Cheetham

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-10-03  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Add Samuel from John Cheetham
+
 2009-10-02  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: Update Pyblassreport URL. Add ASCEND.
