--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-11-15  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Add GoogSysTray
+
 2009-10-03  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: Add Samuel from John Cheetham
