--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-11-20  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Add Gvb and gallery-uploader by Pietro Battiston
+			    Add easygconf by Florian Diesch
+
 2009-11-15  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: Add GoogSysTray
