--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2009-11-27  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src feedback.src about.src articles.src:
+	Update or remove dead links
+	* consulting.src: Remove Sicem, as it's no longer active
+	* developer.src: Change subversion references to git equivalents
+
 2009-11-20  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: Add Gvb and gallery-uploader by Pietro Battiston
