--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-11-30  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Add Lernid
+
 2009-11-27  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src feedback.src about.src articles.src:
