2009-12-02  Rafael Villar Burke  <pachi@rvburke.com>
	* applications.src: Add virt-manager

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-12-02  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Add virt-manager
+
 2009-11-30  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: Add Lernid
