2009-12-30  Rafael Villar Burke  <pachi@rvburke.com>
	* foot.src: Update footer

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-12-30  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* foot.src: Update footer
+
 2009-12-29  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* about.src, applications.src, articles.src, developer.src,
