--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-01-18  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* articles.src: Add Py-gtktree
+
 2010-01-13  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* articles.src: Add german tutorial by Florian Diesch
