--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-01-24  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Add SEATREE
+
 2010-01-22  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* newsitems.py: New win32 installers release announcement
