2010-02-02  Rafael Villar Burke  <pachi@rvburke.com>
	* applications.src: Add Luciole

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-02-02  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Add Luciole
+
 2010-01-24  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: Add SEATREE
