--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-02-17  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Add Turpial
+
 2010-02-11  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: Add Computer Temperature Monitor, Eikazo
