2010-02-19  Rafael Villar Burke  <pachi@rvburke.com>
	* articles.src: Add some more great Mark Mruss' tutorials

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-02-19  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* articles.src: Add some more great Mark Mruss' tutorials
+
 2010-02-17  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: Add Turpial
