--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-03-09  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* downloads.src: Link to 2.16 instead of old 2.14
+
 2010-02-19  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* articles.src: Add some more great Mark Mruss' tutorials
