--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-03-10  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Add Gummi
+
 2010-03-09  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* downloads.src: Link to 2.16 instead of old 2.14
