--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-03-17  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Add Edsa by Morar Zivica
+
 2010-03-10  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: Add Gummi
