2010-03-26  Rafael Villar Burke  <pachi@rvburke.com>
	* applications.src: Add Acire Snippets
	* newsitems.py: Add news item about contributions to Acire

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-03-26  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Add Acire Snippets
+	* newsitems.py: Add news item about contributions to Acire
+
 2010-03-17  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: Add Edsa by Morar Zivica
