--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-03-31  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Add Keybinder
+
 2010-03-30  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: Add MouseTrap
