--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-05-06  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* articles.src: Add a couple of missing articles by Mark Mruss
+
 2010-03-31  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: Add Keybinder
