--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-05-26  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* downloads.src: Clarify text
+	* applications.src: Add PIPCalc by Maxime Labelle
+
 2010-05-06  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* articles.src: Add a couple of missing articles by Mark Mruss
