--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-05-27  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* downloads.src: Improve win32 installation instructions
+
 2010-05-26  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* downloads.src: Clarify text
