--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-06-03  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Add OCRFeeder by Joaquim Rocha.
+
 2010-05-28  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* head.src: Use git URL for browsing code
