--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-07-01  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Change old URL. Add Pygtkspread
+
 2010-06-11  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* consulting.src: Add GFU consulting for PyGTK training.
