--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-07-08  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Add Zim Desktop Wiki
+
 2010-07-01  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: Change old URL. Add Pygtkspread
