--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-07-30  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* articles.src: Add article by John Black on tranlating PyGTK apps.
+
 2010-07-16  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* downloads.src: Try to clarify win32 installation information
