2010-07-30  Rafael Villar Burke  <pachi@rvburke.com>
        * articles.src, Changelog: fix typo s/John/Jon/

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 2010-07-30  Rafael Villar Burke  <pachi@rvburke.com>
 
-	* articles.src: Add article by John Black on tranlating PyGTK apps.
+	* articles.src: Add article by Jon Black on tranlating PyGTK apps.
 
 2010-07-16  Rafael Villar Burke  <pachi@rvburke.com>
 
