--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-08-13  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* developer.src: Add notice about pygobject development.
+
 2010-07-30  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* articles.src: Add article by Jon Black on tranlating PyGTK apps.
