--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-08-25  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications: Add gShogi by John Cheetham
+
 2010-08-13  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* developer.src: Add notice about pygobject development.
