--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-09-18  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Add Gnotero by Sebastiaan Mathôt
+
 2010-08-25  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications: Add gShogi by John Cheetham
