--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-10-14  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Add Recipe Manager by Daniel Taylor
+
 2010-09-18  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: Add Gnotero by Sebastiaan Mathôt
