--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-10-22  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Fix pytrainer broken link
+
 2010-10-16  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* newsitems.py: Add PyGobject 2.26 and PyGTK 2.22 announcement
