2010-10-22  Rafael Villar Burke  <pachi@rvburke.com>
	* applications.src: Fix EduKT broken link

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 2010-10-22  Rafael Villar Burke  <pachi@rvburke.com>
 
-	* applications.src: Fix pytrainer broken link
+	* applications.src: Fix pytrainer and EduKT broken link
 
 2010-10-16  Rafael Villar Burke  <pachi@rvburke.com>
 
