2010-10-28  Rafael Villar Burke  <pachi@rvburke.com>
	* about.src downloads.src: Grammar and spell corrections

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-10-28  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* about.src downloads.src: Grammar and spell corrections
+
 2010-10-22  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: Fix pytrainer and EduKT broken link
