--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-12-24  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* newitems.py downloads.src: Update information about the all-in-one
+	installer.
+
 2010-10-28  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* about.src downloads.src: Grammar and spell corrections
