--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-12-25  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* donwloads.src: fix wrong link to python interpreter
+
 2010-12-24  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* newitems.py downloads.src: Update information about the all-in-one
