--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2011-01-12  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Add cherrytree
+
 2010-12-25  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* donwloads.src: fix wrong link to python interpreter
