2011-01-30  Rafael Villar Burke  <pachi@rvburke.com>
	* applications.src: Change gslimp3 url

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2011-01-30  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* applications.src: Change gslimp3 url
+
 2011-01-12  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* applications.src: Add cherrytree
